# certalize

./: CMakeLists.txt  Certalize.gresource.xml  README.md
cmake/Scripts/: clean-all.cmake
include/: certalize.h  certalize_asn1.h  certalize_base64.h  certalize_buf.h  certalize_debug.h  certalize_ui.h  config.h.cmake
src/: CMakeLists.txt  asn1.c  base64.c  buf.c  debug.c  main.c  ui.c
ui/: CMakeLists.txt  main.ui  menus.ui  style.css  widgets.ui
